# kmu26_pinger_homing

./: .gitignore  CMakeLists.txt  LICENSE  PINGER_HOMING.md  PINGER_HOMING_ARCHITECTURE_KO.md  README.md  package.xml
config/: tank_current_scene.xml
kmu26_finger_homing/: CMakeLists.txt  README.md  package.xml
kmu26_finger_homing/launch/: finger_homing_test_tank.launch.py
kmu26_finger_homing/src/: finger_audio_estimator.cpp  finger_frequency_selector.cpp  finger_homing_controller.cpp
kmu26_finger_homing/test/: test_package_contract.py
kmu26_pinger_homing/: CMakeLists.txt  PINGER_HOMING_ARCHITECTURE_KO.md  README.md  hydrophone_fork.repos  package.xml
kmu26_pinger_homing/launch/: pinger_homing_gui.launch.py  pinger_homing_real.launch.py  pinger_homing_real_interactive.launch.py  pinger_homing_test_tank.launch.py
kmu26_pinger_homing/scripts/: install_pinger_homing_gui_launcher.sh  pinger_web_gui  start_pinger_homing_gui.sh  start_pinger_homing_test_tank.sh
kmu26_pinger_homing/src/: pinger_audio_estimator.cpp  pinger_frequency_selector.cpp  pinger_homing_2d_controller.cpp  pinger_homing_controller.cpp  rc_override_mux.cpp
kmu26_pinger_homing/src/pinger_homing/: README.md  pinger_homing_controller.cpp  pinger_homing_math.hpp  single_hydrophone_homing_controller.py  single_hydrophone_homing_math.py
kmu26_pinger_homing/test/: test_2d_homing_contract.py  test_pinger_homing_dry_run.py  test_pinger_homing_live_runtime.py  test_pinger_rc_pipeline_runtime.py  test_rc_override_mux_runtime.py  test_real_phase_launch_contract.py  test_single_hydrophone_homing_math.py
kmu26_pinger_homing/web_gui/kmu26_auv_web_gui/: __init__.py  ekf_config.py  process_manager.py  ros_interface.py  server.py
kmu26_pinger_homing/web_gui/web/: app.js  index.html  styles.css
kmu26_vision_mission_fsm/: CMakeLists.txt  README.md  package.xml  requirements-yolo.txt
kmu26_vision_mission_fsm/launch/: auv_bbox_controller.launch.py  buoy_vision_mission.launch.py  laptop_yolo_detection.launch.py  mission_fsm_gui.launch.py  mission_fsm_real.launch.py  vision_mission_controller.launch.py
kmu26_vision_mission_fsm/rviz/: mission_fsm.rviz
kmu26_vision_mission_fsm/scripts/: buoy_vision_core.py  check_yolo_env.py  fsm_web_gui.py  real_vehicle_preflight.sh  run_yolo_buoy_detector.sh  setup_laptop_yolo_env.sh  yolo_buoy_detector.py
kmu26_vision_mission_fsm/src/: bbox_controller_node.cpp  ground_truth_buoy_fsm.cpp  mission_rviz_visualizer.cpp  mission_state_machine_node.cpp  observation_mission_fsm.cpp
kmu26_vision_mission_fsm/src/vision_buoy/: README.md  vision_guidance.hpp
kmu26_vision_mission_fsm/test/: test_buoy_vision_core.py  test_delegated_vision_handoff.py  test_observation_mission_runtime.py  test_vision_mission_controller_runtime.py
kmu26_vision_mission_fsm/web/fsm_gui/: app.js  index.html  style.css
launch/: mission_fsm_real.launch.py  pinger_homing_real.launch.py  pinger_homing_real_interactive.launch.py  pinger_homing_test_tank.launch.py
rviz/: mission_fsm.rviz
scripts/: fsm_web_gui.py  real_vehicle_preflight.sh  start_pinger_homing_test_tank.sh
src/: ground_truth_buoy_fsm.cpp  mission_rviz_visualizer.cpp  pinger_audio_estimator.cpp  pinger_frequency_selector.cpp  pinger_homing_2d_controller.cpp  pinger_homing_controller.cpp
src/pinger_homing/: README.md  pinger_homing_controller.cpp
test/: check_ground_truth_buoy_fsm_cpp.cpp  test_adaptive_phase_innovation_runtime.py  test_cpp_odometry_mode_runtime.py  test_motion_response_runtime.py  test_real_phase_launch_contract.py  test_repository_boundaries.py
web/fsm_gui/: app.js  index.html
