<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kmu26_finger_homing</name>
  <version>0.1.0</version>
  <description>Self-contained 2-D Phase/SNR finger homing for test-tank and real AUV use.</description>
  <maintainer email="robot@kmu26.local">KMU26 underwater team</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>audio_common_msgs</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <exec_depend>python3</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
