<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kmu26_pinger_homing</name>
  <version>0.2.0</version>
  <description>Fork-backed hydrophone estimator integration, active pinger RC control, RC mux, and real-vehicle web GUI.</description>
  <maintainer email="robot@example.com">KMU Underwater Robot Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>audio_common_msgs</depend>
  <depend>eigen</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>dvl_msgs</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>audio_capture</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
